--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "tdesign-icons-vue-next": "^0.3.4",
     "tdesign-vue-next": "^1.11.4",
     "vue": "^3.5.13",
