--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "less-loader": "^12.2.0",
     "npm-run-all2": "^7.0.2",
     "prettier": "3.5.3",
+    "rollup-plugin-visualizer": "^5.14.0",
     "typescript": "~5.8.0",
     "vite": "^6.2.1",
     "vite-plugin-mock": "^3.0.2",
